--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -17,7 +17,7 @@
     font-family: 'Sigmar One', cursive;
     font-size: 5rem;
     padding-bottom: 1rem;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
     border-bottom: 2px solid white;
 
     &--first{
