--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,4 +1,4 @@
-.menu-btn{
+.menu-btn {
   position: absolute;
   z-index: 1;
   right: 1rem;
@@ -6,7 +6,6 @@
   height: 20px;
   width: 28px;
   cursor: pointer;
-
 
   &__burger {
     position: absolute;
@@ -17,7 +16,7 @@
     background: white;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: -8px;
       width: 28px;
@@ -25,8 +24,8 @@
       background-color: white;
     }
 
-    &::after{
-      content: '';
+    &::after {
+      content: "";
       position: absolute;
       top: 8px;
       width: 20px;
@@ -53,7 +52,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  opacity: 0.96;
+  opacity: 0.98;
   visibility: hidden;
 
   &.open {
@@ -75,6 +74,26 @@
     &.open {
       transform: translateY(0);
     }
-   
+
+    &__item {
+      transform: translateX(100vw);
+
+      &.open {
+        transform: translateX(0);
+      }
+      &.active > a {
+        color: $secondary-color;
+      }
+    }
+    &__link {
+      display: inline-block;
+      font-size: 2rem;
+      text-transform: uppercase;
+      padding: 2rem 0;
+      font-weight: weight(regular);
+     &:hover {
+        color: $secondary-color;
+      }
+    }
   }
 }
