--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,30 +1,34 @@
 .about {
+  padding-top: 4rem;
   padding-bottom: 2rem;
+  overflow: hidden;
 
   &__bio-image {
     height: 50vh;
-    width: 100%;
+    width: 120%;
     background:
-      linear-gradient(to right, rgba($primary-color, 0.9), rgba($primary-color, 0.3)),
-      url("../../assets/profile-pic-professional.jpg") center top;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
+      // linear-gradient(to right, rgba($primary-color, 0.9), rgba($primary-color, 0.3)),
+      url("../../assets/profile-pic-professional.jpg") no-repeat;
+    background-position: 25% 75%;
+    background-size: contain;
+    
 
     p {
       margin-bottom: 2rem;
     }
   }
   &__bio {
-    width: 80%;
-    text-align: center;
-
-    .text-secondary {
-      padding-bottom: 1rem;
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+    padding: 2rem 4rem;
+    
   }
-
+  .social-icons {
+    display: flex;
+    flex-direction: column;
+  }
 
 }
