--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'home';
 @import 'menu';
 @import 'about';
+@import 'projects';
 
 //font-family: 'Raleway', sans-serif;
 //font-family: 'Sigmar One', cursive;
