--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -22,13 +22,24 @@
     img {
       width: 100%;
     }
-     
+   }
   
-  
-  }
+&__btns{
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  padding: 5px;
+  font-size: 2rem;
+ a{
+  &:hover {
+    color:$secondary-color;
+
+}
+ } 
 
 }
 .social-icons {
   display: flex;
   flex-direction: column;
+}
 }
