--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'menu';
 @import 'about';
 @import 'projects';
+@import 'responsive';
 
 //font-family: 'Raleway', sans-serif;
 //font-family: 'Sigmar One', cursive;
