--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -24,7 +24,7 @@
     justify-content: center;
     text-align: justify;
     padding: 3rem 4rem;
-    border-bottom: 5px solid white;
+    // border-bottom: 5px solid white;
   }
   
 }
