--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -1,6 +1,7 @@
 .skills {
   height: 100vh;
   padding-bottom: 4rem;
+  font-size: 3rem;
   h1 {
     margin: 2rem 0;
     font-size: 2.5 rem;
@@ -15,13 +16,16 @@
     width: 60vw;
     margin: 2rem auto 0 auto;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
+    
   }
 
   &__item {
     position: relative;
     overflow: hidden;
+  
+
     }
   
 
