--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -7,11 +7,12 @@
   justify-content: center;
  
   
+
   background:
   linear-gradient(
-    to right,
-    rgba($primary-color, 0.9),
-    rgba($primary-color, 0.3)
+    to top,
+    rgba($primary-color, 0.8),
+    rgba($primary-color, 1)
   ),
    url('../../assets/connect.jpeg') no-repeat center top;
   background-size: cover;
