--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,20 +1,21 @@
 .home{
+  margin-bottom: 4rem;
   height: 100vh;
-  padding-top: 30vh;
+  padding-top: 40vh;
   overflow: hidden;
   align-items: center;
   text-align: center;
   background:
   linear-gradient(
-    to right,
-    rgba($primary-color, 0.9),
-    rgba($primary-color, 0.3)
+    to bottom,
+    rgba(rgb(70, 70, 92), 0.6),
+    rgba($primary-color, 1)
   ),
-   url('../../assets/background.jpeg') center top;
+   url('../../assets/bg.png') center top;
   background-size: cover;
 
   &__name{
-    font-size: 8rem;
+    font-size: 6rem;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
     border-bottom: 2px solid white;
