--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,4 +1,11 @@
 @include media-md {
+  .home{
+    padding-top: 50vh;
+    &__name{
+      font-size: 8rem;
+    }
+  }
+
   .menu-btn {
     visibility: hidden;
   }
@@ -12,7 +19,6 @@
       height: 100%;
       background: transparent;
       text-align: right;
-
 
       &__item {
         display: inline;
@@ -58,21 +64,35 @@
 
 }
 .skills{
-  margin:5rem;
-  padding: 5rem;
-  font-size: 5rem;
+   
   h1{
     font-size: 3rem;
     padding: 2rem;
   }
   &__items{
-    grid-template-columns: repeat(5, 1fr);
-
-  }
-  &__item{
-    margin:4rem;
+    font-size: 6rem;
+    margin-top: 4rem;
+    grid-template-columns: repeat(4, 1fr);
   }
 
+  .bigger {
+    font-size: 8rem;
+  }
+  .big{
+    font-size: 6rem;
+  }
+ 
+  img{
+    max-width: 7rem;
+    max-height: 5rem;
+    text-align: center;
+      }
+ 
+
+}
+
+.contact{
+  margin-top: 8rem ;
 }
 
 
