--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -1,23 +1,34 @@
 .skills {
   height: 100vh;
   padding-bottom: 4rem;
-  font-size: 3rem;
+  background:
+  linear-gradient(
+    to bottom,
+    rgba($primary-color, 0.85),
+    rgba($primary-color, 1)
+  ),
+   url('../../assets/skills.png') center top;
+  background-size: cover;
   h1 {
     margin: 2rem 0;
-    font-size: 2.5 rem;
-    text-align: center;
     padding-bottom: 2rem;
+    font-size: 2.5rem;
+    background:
+    linear-gradient(
+    rgba($primary-color, 0.9),
+    rgba($primary-color, 0)),
   }
 
   &__items {
+    font-size: 3rem;
     align-items: center;
     justify-items: center;
-    height: 50vh;
+    height: 80vh;
     width: 60vw;
     margin: 2rem auto 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem;
+    grid-gap: 3rem;
     
   }
 
@@ -27,8 +38,16 @@
   
 
     }
-  
-
-
+    img{
+      max-width: 50px;
+      max-height: 45px;
+    }
+    .small{
+      margin: 15px;
+    } 
+  .big,.bigger{
+    font-size: 5rem;
+  }
+ 
 
 }
