--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: #130e3f;
-$secondary-color:#ffe3d8;
+$primary-color: #041335;
+$secondary-color:#f5d4c6;
 $light:#03506f;
 $lighter:#bbbbbb;
 
@@ -39,4 +39,23 @@ $font-weights: (
 
 }
 
+@mixin ease {
+  transition: all 0.5s ease-in-out;
+}
 
+
+@mixin animation {
+   animation: expand 0.8s ease-in;
+}  
+@mixin ani {
+  animation: expand 1s ease-in;
+}  
+@keyframes expand {
+ from {
+  transform: scaleX(0);
+    }
+  to {
+  transform: scaleX(1);
+    }
+  }
+  
