--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -41,9 +41,10 @@
   color: $secondary-color;
   font-size: 1.5rem;
   max-width: 100%;
-  padding: 1.5rem 4rem;
+  padding: 1.5rem 3rem;
   text-align: justify;
   align-items: center;
+  line-height: 1.3;
 }
 
 .dot {
