--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -25,16 +25,16 @@
   linear-gradient(
   to bottom,
   rgba(rgba(172, 137, 85, 0.384), 0.6 ),
-  rgba(rgb(165, 155, 127), 0.8));
-    width: 350px;
-    height: 620px;
+  rgba(#a59b7f, 0.8));
+    width: 250px;
+    height: 450px;
     padding-top: 15px;
     padding-left: 18px;
     border-radius: 2rem;
   }
   &__bio-image {
     border-radius: 2rem;
-    width: 350px;   
+    width: 250px;   
     
 
   }
@@ -43,10 +43,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: justify;
-    padding: 3rem 4rem;
+    padding: 2rem 2rem;
     font-size: 1.5rem;
-    // border-bottom: 5px solid white;
+    line-height: 1.2;
   }
   
 }
