--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -1,7 +1,7 @@
 .slideshow-container {
   max-width: 800px;
   position: relative;
-  margin: auto;
+  margin: 1rem;
 }
 
 /* Hide the images by default */
@@ -13,11 +13,11 @@
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 30rem;
+  top: 13rem;
   width: auto;
-  margin-top: -22px;
+  margin-top: -26px;
   padding: 16px;
-  color: white;
+  color: $secondary-color;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -33,17 +33,15 @@
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: $primary-color;
 }
-
 /* Caption text */
 .projects_description {
   color: $secondary-color;
   font-size: 1.5rem;
   max-width: 100%;
-  padding: 1.5rem 3rem;
   text-align: justify;
-  align-items: center;
+  padding: 1rem 1rem;
   line-height: 1.3;
 }
 
