--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -43,6 +43,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: justify;
     padding: 2rem 2rem;
     font-size: 1.5rem;
     line-height: 1.2;
