--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,10 +1,10 @@
 @include media-md {
   .header {
-   padding-top: 0rem;
+    padding-top: 0rem;
   }
-  .home{
+  .home {
     padding-top: 50vh;
-    &__name{
+    &__name {
       font-size: 8rem;
     }
   }
@@ -17,7 +17,6 @@
     position: relative;
     width: 98vw;
 
-    
     .menu-nav {
       display: block;
       transform: translateY(0);
@@ -34,107 +33,181 @@
       }
     }
   }
-.about {
-  height: 100vh;
-  &H{
-    text-align: center;
-    padding: 2rem;
-    font-size: 3rem;
-  }
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  font-size: 2rem;
-  &_img-cont{
+  .about {
+    height: 130vh;
+    &H {
+      text-align: center;
+      padding: 2rem;
+      font-size: 3rem;
+    }
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    &_img-cont {
       width: 350px;
       height: 620px;
-      }
-    &__bio-image {
-      width: 350px;   
-      
-  
     }
-   
-  &__bio{
-   font-size: 2rem;
-   line-height: 1.3;
-   padding-top: 2rem;
-   justify-content: flex-start;
-   margin-left: -4rem;
-   margin-right: 8rem;    
+    &__bio-image {
+      width: 350px;
+    }
+
+    &__bio p {
+      line-height: 1.3;
+      justify-content: flex-start;
+      margin-right: 1rem;
+    }
+  }
+  .projects {
+    .slideshow-container {
+      margin: auto;
+    }
+    .prev,
+    .next {
+      top: 29rem;
+      font-size: 22px;
+    }
+    h1 {
+      font-size: 3rem;
+      padding: 2rem;
+    }
+    height: 120vh;
+    .projects_description {
+      line-height: 1.5;
+    }
   }
 
-}
-.projects{
- .slideshow-container {
-    margin: auto;
-  }
-  .prev, .next {
-    
-    top: 29rem;
-    font-size: 22px;
-  }
-  h1{
-    font-size: 3rem;
-    padding: 2rem;
-  }
-  height: 100vh;
-.projects_description{
-    line-height: 1.5;
-    font-size: 1.7rem;
-  }
-}
+  .skills {
+    h1 {
+      font-size: 3rem;
+      padding: 2rem;
+    }
+    &__items {
+      font-size: 5rem;
+      margin: 4rem auto 0 auto;
+      height: 100vh;
+      width: 80vh;
+    }
+    .small {
+      font-size: 1rem;
+    }
+    .bigger {
+      font-size: 8rem;
+    }
+    .big {
+      font-size: 6rem;
+    }
+    .xtra {
+      font-size: 10rem;
+    }
 
-
-.skills{
-   
-  h1{
-    font-size: 3rem;
-    padding: 2rem;
-  }
-  &__items{
-    font-size: 6rem;
-    margin-top: 4rem;
-    grid-template-columns: repeat(4, 1fr);
+    img {
+      max-width: 7rem;
+      max-height: 5rem;
+      text-align: center;
+    }
   }
 
-  .bigger {
-    font-size: 8rem;
+  .contact {
+    height: 120vh;
+    margin-top: 10rem;
   }
-  .big{
-    font-size: 6rem;
-  }
-  .xtra{
-    font-size: 11rem;
-  }
- 
-  img{
-    max-width: 7rem;
-    max-height: 5rem;
-    text-align: center;
+  .social-icons {
+    visibility: visible;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+    font-size: 1.2rem;
+
+    a {
+      padding: 0.6rem;
+
+      &:hover {
+        color: $light;
       }
- 
-
+    }
+  }
 }
+
+@include media-lrg {
+  .about {
+    &_img-cont {
+      width: 400px;
+      height: 720px;
+    }
+    &__bio-image {
+      width: 400px;
+    }
+
+    &__bio p {
+      font-size: 1.8rem;
+      margin-top: 3rem;
+      margin-right: 2rem;
+      margin-left: -4rem;
+    }
+  }
+  
+  .skills {
+   
+    &__items {
+      height: 100vh;
+      width: 120vh;
+      grid-template-columns: repeat(5, 1fr);
+
+    }
+
+  }
+}
+@include media-lrg {
+
+  .about {
+    height: 100vh;
+   &__bio p {
+      font-size: 2rem;
+      line-height: 1.5;
+      margin-right: 4rem;
+      margin-left: -8rem;
+      
+    }
+  }
+  .projects{
+    .slideshow-container {
+      max-width: 1100px;
+    }
+    .projects_description {
+          font-size: 2rem;
+    }
+    .prev, .next {
+      top:39rem;
+      font-size: 2rem;    
+    }
+
+  }
+  .skills {
+   
+    &__items {
+     font-size: 7rem;
+    }
+    .bigger{
+      font-size: 10rem;
+    }
+    .big{
+      font-size:8rem
+    }
+  }
 
 .contact{
-  margin-top: 8rem ;
-}
-.social-icons {
-  visibility: visible;
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  bottom: 1rem;
-  left: 1rem;
-  font-size: 1.2rem;
-
-  a {
-    padding: 0.6rem;
-
-    &:hover {
-      color: $light;
-    }
+  h2{
+  font-size:5rem;
   }
+ &__list{
+   font-size: 3rem;
+  .xtra{
+    font-size: 6rem;
+  }
+  }
+ 
 }
+
 
 }
