--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -184,9 +184,9 @@
 
   }
   .skills {
-   
+   height: 100vh;
     &__items {
-     font-size: 7rem;
+     font-size: 6rem;
     }
     .bigger{
       font-size: 10rem;
