--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -21,13 +21,13 @@ $font-weights: (
 
 
 @mixin media-md {
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
   @content;
 }
 
 }
 @mixin media-lrg {
-@media screen and (min-width: 1250px){
+@media screen and (min-width: 1250px) and (min-height:800px){
   @content;
 }
 
