--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -57,6 +57,8 @@
     }
   }
   .projects {
+    margin-bottom:30rem;
+
     .slideshow-container {
       margin: auto;
     }
@@ -76,7 +78,6 @@
   }
 
   .skills {
-    padding-top:5rem;
     height: 110vh;
     h1 {
       font-size: 3rem;
