--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -2,11 +2,20 @@
   max-width: 800px;
   position: relative;
   margin: 1rem;
+  scroll-snap-type: x mandatory;
+  overflow-x: scroll;
+  display: flex;
 }
 
 /* Hide the images by default */
 .mySlides {
   display: none;
+  scroll-snap-align: start;
+  min-width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Next & previous buttons */
