--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -10,18 +10,21 @@
   display: none;
 
 }
-
+hr{
+  margin-top: 1rem;
+  border: $primary-color;
+}
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 13rem;
+  top: 15.5rem;
   width: auto;
   margin-top: -26px;
   padding: 16px;
-  color: $secondary-color;
+  color: rgb(219, 160, 104);
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1.5rem;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -33,11 +36,9 @@
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: $primary-color;
 }
-/* Caption text */
 .projects_description {
   color: $secondary-color;
   font-size: 1.5rem;
