--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,6 +45,12 @@ main {
   height: 100%;
   width: 100%;
 }
+h5{
+  font-size: 1.3rem;
+  color: $secondary-color;
+  text-align: center;
+}
+
 
 footer {
   visibility: hidden;
