--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -30,6 +30,30 @@
       font-weight: weight(bold);
           }
   }
+  .stamp{
+    font-family: 'Dosis', sans-serif;
+    height:max-content;
+    width:max-content;
+    padding: 0.5rem;
+    font-size: 4rem;
+    font-weight: weight(bold);
+    color: $primary-color;
+    left:78rem;
+    top:-15px;
+    border-radius:5px;
+    position:relative;
+    background-color:$secondary-color;
+    -webkit-animation-name: pulse;
+    animation-name: pulse;
+    animation-delay:1.2s;
+    -webkit-animation-delay:1.2s;
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s;
+    opacity: 0;
+    -webkit-animation-fill-mode:forwards;
+     animation-fill-mode:forwards;
+    
+  }
 
 
 }
