--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -61,19 +61,21 @@ $font-weights: (
   
  
   
-  
-  @keyframes pulse{
-    0%{
-      opacity: 0;
-    }
-    60%{
-      transform: rotate(-5deg) scale(4);
-    }
-    100%{
-      opacity:1;
-      transform: rotate(15deg) scale(1);
-    }
+@mixin pulse {
+    animation: pulse 1.2s 0.5s forwards;
+}   
+@keyframes pulse{
+  0%{
+    opacity: 0;
   }
+  60%{
+    transform: rotate(-10deg) scale(5);
+  }
+  100%{
+    opacity:1;
+    transform: rotate(15deg) scale(1);
+  }
+}
   
   
   
