--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -31,6 +31,7 @@
           }
   }
   .stamp{
+    @include pulse;
     font-family: 'Dosis', sans-serif;
     height:max-content;
     width:max-content;
@@ -38,20 +39,13 @@
     font-size: 4rem;
     font-weight: weight(bold);
     color: $primary-color;
-    left:78rem;
-    top:-15px;
+    left:74rem;
+    top:-45px;
     border-radius:5px;
     position:relative;
     background-color:$secondary-color;
-    -webkit-animation-name: pulse;
-    animation-name: pulse;
-    animation-delay:1.2s;
-    -webkit-animation-delay:1.2s;
-    -webkit-animation-duration: 0.5s;
-    animation-duration: 0.5s;
     opacity: 0;
-    -webkit-animation-fill-mode:forwards;
-     animation-fill-mode:forwards;
+  
     
   }
 
