--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -29,7 +29,22 @@
       color: $secondary-color;
       font-weight: weight(bold);
           }
+        }  
+  
+  .stamp-cont{
+    display: flex;
+    justify-content: center;
+  
+  }    
+  .stamp{
+    font-family: 'Dosis', sans-serif;
+    height:max-content;
+    width:max-content;
+    padding: 0.5rem;
+    font-size: 2.5rem;
+    font-weight: weight(bold);
+    color: $secondary-color;
+            
   }
- 
 
 }
