--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -57,7 +57,7 @@
     }
   }
   .projects {
-    margin-bottom:30rem;
+    margin-bottom: 30rem;
 
     .slideshow-container {
       margin: auto;
@@ -133,25 +133,6 @@
 }
 
 @include media-lrg {
-  .home{
-    .stamp{
-      @include pulse;
-      font-family: 'Dosis', sans-serif;
-      height:max-content;
-      width:max-content;
-      padding: 0.5rem;
-      font-size: 4rem;
-      font-weight: weight(bold);
-      color: $primary-color;
-      left:74rem;
-      top:-45px;
-      border-radius:5px;
-      position:relative;
-      background-color:$secondary-color;
-      opacity: 0;
-    }
-  
-  }
   .about {
     &_img-cont {
       margin-top: 2rem;
@@ -169,68 +150,75 @@
       margin-left: -4rem;
     }
   }
-  
+
   .skills {
-   
     &__items {
       height: 100vh;
       width: 105vh;
       grid-template-columns: repeat(5, 1fr);
     }
-
   }
-
 }
 @include media-xlrg {
-
-  .about {
-    height: fit-content;
-   &__bio p {
-      font-size: 2rem;
-      line-height: 1.5;
-      margin-right: 4rem;
-      margin-left: -8rem;
-      
-    }
-  }
-  .projects{
-    .slideshow-container {
-      max-width: 1100px;
-    }
-    .projects_description {
-          font-size: 2rem;
-    }
-    .prev, .next {
-      top:41rem;
-      font-size: 1.8rem;    
+  .home {
+    .stamp {
+      @include pulse;
+      font-size: 4rem;
+      font-weight: weight(bold);
+      color: $primary-color;
+      left: 30%;
+      top: -45px;
+      border-radius: 5px;
+      position: relative;
+      background-color: $secondary-color;
+      opacity: 0;
     }
 
-  }
-  .skills {
-   height: 100vh;
-    &__items {
-     font-size: 6rem;
+    .about {
+      height: fit-content;
+      &__bio p {
+        font-size: 2rem;
+        line-height: 1.5;
+        margin-right: 4rem;
+        margin-left: -8rem;
+      }
     }
-    .bigger{
-      font-size: 10rem;
+    .projects {
+      .slideshow-container {
+        max-width: 1100px;
+      }
+      .projects_description {
+        font-size: 2rem;
+      }
+      .prev,
+      .next {
+        top: 41rem;
+        font-size: 1.8rem;
+      }
     }
-    .big{
-      font-size:8rem
+    .skills {
+      height: 100vh;
+      &__items {
+        font-size: 6rem;
+      }
+      .bigger {
+        font-size: 10rem;
+      }
+      .big {
+        font-size: 8rem;
+      }
+    }
+
+    .contact {
+      h2 {
+        font-size: 5rem;
+      }
+      &__list {
+        font-size: 3rem;
+        .xtra {
+          font-size: 6rem;
+        }
+      }
     }
   }
-
-.contact{
-  h2{
-  font-size:5rem;
-  }
- &__list{
-   font-size: 3rem;
-  .xtra{
-    font-size: 6rem;
-  }
-  }
- 
-}
-
-
 }
