--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,49 +1,44 @@
-.home{
+.home {
   margin-bottom: 4rem;
   height: 100vh;
   padding-top: 40vh;
   overflow: hidden;
   align-items: center;
   text-align: center;
-  background:
-  linear-gradient(
-    to bottom,
-    rgba(rgb(70, 70, 92), 0.6),
-    rgba($primary-color, 1)
-  ),
-   url('../../assets/bg.png') center top;
+  background: linear-gradient(to bottom, rgba(rgb(70, 70, 92), 0.6), rgba($primary-color, 1)),
+    url("../../assets/bg.png") center top;
   background-size: cover;
 
-  hr{
-  @include animation;
-  border:$secondary-color solid 3px;
- }
-  &__name{
+  hr {
+    @include animation;
+    border: $secondary-color solid 3px;
+  }
+  &__name {
     @include ani;
 
     font-size: 6rem;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
 
-    &--first{
+    &--first {
       color: $secondary-color;
       font-weight: weight(bold);
-          }
-        }  
-  
-  .stamp-cont{
-    display: flex;
-    justify-content: center;
-  
-  }    
-  .stamp{
-    font-family: 'Dosis', sans-serif;
-    height:max-content;
-    width:max-content;
-    padding: 0.5rem;
-    font-size: 2.5rem;
-    font-weight: weight(bold);
-    color: $secondary-color;
-            
+    }
   }
- }
+
+  // .stamp-cont{
+  //   display: flex;
+  //   justify-content: center;
+
+  // }
+  // .stamp{
+  //   font-family: 'Dosis', sans-serif;
+  //   height:max-content;
+  //   width:max-content;
+  //   padding: 0.5rem;
+  //   font-size: 2.5rem;
+  //   font-weight: weight(bold);
+  //   color: $secondary-color;
+
+  // }
+}
